--- a/package.json
+++ b/package.json
@@ -12,12 +12,15 @@
     "react-dom": "18.1.0"
   },
   "devDependencies": {
+    "@faker-js/faker": "^7.5.0",
     "@tailwindcss/forms": "^0.5.2",
     "@types/node": "17.0.35",
     "@types/react": "18.0.9",
     "@types/react-dom": "18.0.5",
     "autoprefixer": "^10.4.7",
     "postcss": "^8.4.14",
+    "tailwind-scrollbar": "^1.3.1",
+    "tailwind-scrollbar-hide": "^1.1.7",
     "tailwindcss": "^3.1.2",
     "typescript": "4.7.2"
   }
