--- a/package.json
+++ b/package.json
@@ -7,7 +7,10 @@
   },
   "dependencies": {
     "@heroicons/react": "^1.0.6",
+    "firebase": "^9.9.4",
     "next": "latest",
+    "next-auth": "^4.10.3",
+    "nodemailer": "^6.7.8",
     "react": "18.1.0",
     "react-dom": "18.1.0"
   },
