--- a/package.json
+++ b/package.json
@@ -6,8 +6,13 @@
     "start": "next start"
   },
   "dependencies": {
+    "@emotion/react": "^11.10.4",
+    "@emotion/styled": "^11.10.4",
     "@headlessui/react": "^1.6.6",
     "@heroicons/react": "^1.0.6",
+    "@mui/icons-material": "^5.10.3",
+    "@mui/material": "^5.10.4",
+    "email-validator": "^2.0.4",
     "firebase": "^9.9.4",
     "next": "latest",
     "next-auth": "^4.10.3",
@@ -15,7 +20,8 @@
     "react": "18.1.0",
     "react-dom": "18.1.0",
     "react-moment": "^1.1.2",
-    "recoil": "^0.7.5"
+    "recoil": "^0.7.5",
+    "styled-components": "^5.3.5"
   },
   "devDependencies": {
     "@faker-js/faker": "^7.5.0",
