--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react": "18.1.0",
     "react-dom": "18.1.0",
     "react-moment": "^1.1.2",
+    "react-router-dom": "^6.3.0",
     "recoil": "^0.7.5",
     "styled-components": "^5.3.5"
   },
