--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "react-moment": "^1.1.2",
     "react-router-dom": "^6.3.0",
     "recoil": "^0.7.5",
-    "styled-components": "^5.3.5"
+    "styled-components": "^5.3.5",
+    "timeago-react": "^3.0.5"
   },
   "devDependencies": {
     "@faker-js/faker": "^7.5.0",
